creating the homepage e starting fixing problems with fetching the meme image
